# stadium-catchment-location-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/sample/: venues_sample.csv
docs/: data_dictionary.md  methodology.md  qgis_workflow.md
notebooks/: 01_exploratory_geospatial_analysis.ipynb
outputs/maps/: catchment_interactive_map.html
outputs/qgis/: catchment.gpkg  venues_scored.geojson
outputs/tables/: venue_opportunity_summary.csv
src/: __init__.py  build_outputs.py  config.py  geospatial_utils.py  load_data.py  scoring.py
tests/: test_geospatial_utils.py  test_scoring.py
